# cpu-ray-tracer

./: Cargo.toml  README.md  demo.json  lots of balls.json
src/: event_manager.rs  graphics.rs  gui.rs  lib.rs  main.rs  quaternion.rs  raytracer.rs  renderer.rs  vector.rs  world.rs
src/gui/: camera_settings.rs  light_settings.rs  mod.rs  object_settings.rs  utils.rs
