[package]
name = "ray_tracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "*"
egui = "*"
egui_glium = "*"
rayon="*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
rfd = "*"
rand = "*"
